# acwv-postprocessing

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  split_data.sh
sample/: time_spent.txt
sample/coarse_grid/: output_data_0_0.vti  output_data_0_1.vti  output_data_0_10.vti  output_data_0_11.vti  output_data_0_12.vti  output_data_0_13.vti  output_data_0_14.vti  output_data_0_15.vti  output_data_0_16.vti  output_data_0_17.vti  output_data_0_18.vti  output_data_0_19.vti  output_data_0_2.vti  output_data_0_20.vti  output_data_0_21.vti  output_data_0_22.vti  output_data_0_23.vti  output_data_0_24.vti  output_data_0_25.vti  output_data_0_26.vti  output_data_0_27.vti  output_data_0_28.vti  output_data_0_29.vti  output_data_0_3.vti  output_data_0_30.vti  output_data_0_31.vti  output_data_0_32.vti  output_data_0_33.vti  output_data_0_34.vti  output_data_0_35.vti  output_data_0_36.vti  output_data_0_37.vti  output_data_0_38.vti  output_data_0_39.vti  output_data_0_4.vti  output_data_0_40.vti  output_data_0_5.vti  output_data_0_6.vti  output_data_0_7.vti  output_data_0_8.vti  (+2 more)
sample/refined_grid/: output_data_0_0.vti  output_data_0_1.vti  output_data_0_10.vti  output_data_0_11.vti  output_data_0_12.vti  output_data_0_13.vti  output_data_0_14.vti  output_data_0_15.vti  output_data_0_16.vti  output_data_0_17.vti  output_data_0_18.vti  output_data_0_19.vti  output_data_0_2.vti  output_data_0_20.vti  output_data_0_21.vti  output_data_0_22.vti  output_data_0_23.vti  output_data_0_24.vti  output_data_0_25.vti  output_data_0_26.vti  output_data_0_27.vti  (+16 more)
(+4 files in other folders)
