[project]
name = "acwv-postprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "pydot>=4.0.1",
    "pyvista>=0.45.2",
    "tensorflow>=2.19.0",
]
